besu/ingress/k8s-backups/20250505-151723/ingressroutes-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"besu-graphql-route","namespace":"paladin"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`graphql-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService","name":"besu-graphql-lb"}]}],"tls":{}}}
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 2
    name: besu-graphql-route
    namespace: paladin
    resourceVersion: "9860828"
    uid: 025107e7-f9f2-43c9-91d1-0b03c86e45b5
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`graphql-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-graphql-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"besu-rpc-route","namespace":"paladin"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`rpc-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService","name":"besu-rpc-lb"}]}],"tls":{}}}
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 2
    name: besu-rpc-route
    namespace: paladin
    resourceVersion: "9860825"
    uid: ce9e3993-969d-4fb3-bd6e-b91552c25188
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`rpc-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-rpc-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"besu-ws-route","namespace":"paladin"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`ws-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-ws-middleware"},{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService","name":"besu-ws-lb"}]}],"tls":{}}}
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 2
    name: besu-ws-route
    namespace: paladin
    resourceVersion: "9860827"
    uid: 6dd05fdb-ec06-48d5-be9f-627acc3bc6e1
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`ws-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-ws-middleware
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-ws-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:30:33Z","generation":1,"name":"paladin1-ui-ingress","namespace":"paladin","resourceVersion":"9837261","uid":"1cfdadf2-3ed6-4c6c-91f8-b1aaaf1f8fc1"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin1.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node1","port": [...]
    creationTimestamp: "2025-05-05T16:30:33Z"
    generation: 1
    name: paladin1-ui-ingress
    namespace: paladin
    resourceVersion: "9842183"
    uid: 1cfdadf2-3ed6-4c6c-91f8-b1aaaf1f8fc1
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin1.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node1
        port: 8548
    tls:
      secretName: paladin1-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:30:55Z","generation":1,"name":"paladin2-ui-ingress","namespace":"paladin","resourceVersion":"9837262","uid":"92361e97-f572-4549-96b5-c03037fd32b3"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin2.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node2","port": [...]
    creationTimestamp: "2025-05-05T16:30:55Z"
    generation: 1
    name: paladin2-ui-ingress
    namespace: paladin
    resourceVersion: "9842186"
    uid: 92361e97-f572-4549-96b5-c03037fd32b3
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin2.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node2
        port: 8548
    tls:
      secretName: paladin2-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:31:30Z","generation":1,"name":"paladin3-ui-ingress","namespace":"paladin","resourceVersion":"9837263","uid":"d3ba7334-856f-4c33-9133-c7bbc660ef3a"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin3.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node3","port": [...]
    creationTimestamp: "2025-05-05T16:31:30Z"
    generation: 1
    name: paladin3-ui-ingress
    namespace: paladin
    resourceVersion: "9842187"
    uid: d3ba7334-856f-4c33-9133-c7bbc660ef3a
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin3.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node3
        port: 8548
    tls:
      secretName: paladin3-tls
kind: List
metadata:
  resourceVersion: ""
