besu/ingress/k8s-backups/20250505-151723/middlewares-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"besu-retry-middleware","namespace":"paladin"},"spec":{"retry":{"attempts":3,"initialInterval":"500ms"}}}
    creationTimestamp: "2025-05-05T17:41:43Z"
    generation: 1
    name: besu-retry-middleware
    namespace: paladin
    resourceVersion: "9849835"
    uid: 28e49591-75bf-4711-bf6e-b09e32ad0431
  spec:
    retry:
      attempts: 3
      initialInterval: 500ms
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"besu-ws-middleware","namespace":"paladin"},"spec":{"headers":{"customRequestHeaders":{"Connection":"Upgrade","Upgrade":"websocket"}}}}
    creationTimestamp: "2025-05-05T17:41:43Z"
    generation: 1
    name: besu-ws-middleware
    namespace: paladin
    resourceVersion: "9849833"
    uid: 0fb2ecef-8f4d-4a9d-baf2-25d2087c12bf
  spec:
    headers:
      customRequestHeaders:
        Connection: Upgrade
        Upgrade: websocket
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:29:37Z","generation":1,"name":"my-basic-auth","namespace":"paladin","resourceVersion":"9837317","uid":"e26f3dfa-0f99-45e2-af5b-8ce30d4ddd46"},"spec":{"basicAuth":{"secret":"my-basic-auth-secret"}}}
    creationTimestamp: "2025-05-05T16:29:37Z"
    generation: 1
    name: my-basic-auth
    namespace: paladin
    resourceVersion: "9842194"
    uid: e26f3dfa-0f99-45e2-af5b-8ce30d4ddd46
  spec:
    basicAuth:
      secret: my-basic-auth-secret
kind: List
metadata:
  resourceVersion: ""
